--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-Leiningen.gitignore
 \.idea/
-lib/
-target/classes/META-INF/maven/sudoku-solver/sudoku-solver/pom\.properties
-target/stale/leiningen\.core\.classpath\.extract-native-dependencies
 *.iml
+\out/
